Add Sensor another sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,6 @@ upload_speed = 921600
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.4
 	adafruit/Adafruit Unified Sensor@^1.1.5
-    adafruit/Adafruit IO Arduino@^4.2.2
+	adafruit/Adafruit IO Arduino@^4.2.2
 	denyssene/SimpleKalmanFilter@^0.1.0
+	milesburton/DallasTemperature@^3.11.0
